<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TableFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#607D8B"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TableRow android:layout_height="70dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/instraling" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperatuur" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/datum" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tijd" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/huidigeVermogen" />
            </TableRow>

        </TableLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout1"
            app:layout_constraintStart_toStartOf="parent">

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintBottom_toTopOf="@+id/navigation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TableRow>


                    <TextView
                        android:layout_width="70dp"
                        android:gravity="center"
                        android:text="0" />

                    <TextView
                        android:layout_width="100dp"
                        android:gravity="center"
                        android:text="0" />

                    <TextView
                        android:layout_width="100dp"
                        android:gravity="center"
                        android:text="01-01-2019" />

                    <TextView
                        android:layout_width="50dp"
                        android:gravity="center"
                        android:text="00:00" />

                    <TextView
                        android:layout_width="70dp"
                        android:gravity="center"
                        android:text="0" />
                </TableRow>

            </TableLayout>
        </ScrollView>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <TextView
            android:id="@+id/lblHuidigeVermogen"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:text="@string/huidigeVermogen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <EditText
            android:id="@+id/txtHuidigVermogen"
            android:layout_width="146dp"
            android:layout_height="41dp"
            android:layout_marginTop="24dp"
            android:ems="4"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/lblHuidigeVermogen"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/btnUpdate"
            app:layout_constraintStart_toEndOf="@+id/txtHuidigVermogen"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <TextView
            android:id="@+id/DatumTijd"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/DatumTijd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <TextView
            android:id="@+id/meldingNummer"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHuidigeVermogen" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>